added icon and chatbotrouting

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,15 +43,16 @@ dependencies:
   google_generative_ai: ^0.3.1
   typeset: ^2.1.1
 
-flutter_launcher_icons:
-  android: "launcher_icon"
-  ios: true
-  image_path: "assets/icon.jpg"
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: "^0.13.1"
 
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/icon.jpg"
 
 
   # The "flutter_lints" package below contains a set of recommended lints to
