--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   google_fonts: ^6.2.0
   google_generative_ai: ^0.3.1
   typeset: ^2.1.1
+  youtube_player_flutter: ^9.0.1
 
 
 dev_dependencies:
