--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,7 +43,11 @@ dependencies:
   google_generative_ai: ^0.3.1
   typeset: ^2.1.1
   youtube_player_flutter: ^9.0.1
-
+  hive: ^2.2.3
+  jiffy: ^6.3.0
+  percent_indicator: ^4.2.3
+  flutter_svg: ^2.0.10+1
+  fl_chart: ^0.67.0
 
 dev_dependencies:
   flutter_test:
@@ -76,7 +80,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - lib/images/
+    # - lib/images/
     - assets/aman.jpg
     - assets/icon.jpg
   #   - images/a_dot_ham.jpeg
